--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport"
+  content="width=devise-width">
   <title>Thea Leylar</title>
   <link rel="stylesheet" type="text/css" href="マイサイト.css">
 </head>
