--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport"
-  content="width=devise-width">
+  content="width=device-width">
   <title>Thea Leylar</title>
   <link rel="stylesheet" type="text/css" href="マイサイト.css">
 </head>
